# bits-c

./: .clang-format  .clang-tidy  .gitignore  GNUmakefile  Makefile  README.md  alloc.c  alloc.h  base64.c  build.zig  configure  curling.c  defer.h  defer.hpp  demo_oop.c  flake.nix  fnv.c  fnv.h  fnv_test.c  hashtable.c  hashtable.h  hashtable_test.c  hashtable_test.py  hashtable_vectors.def  hashtable_wrapper.c  hello.cpp  macro.h  meson.build  message_queue.c  message_queue.h  message_queue_basic.c  message_queue_copies.c  objc.ini  overflow.c  poll.c  prelude.c  prelude.h  script.c  setup.py  test.zig  (+2 more)
.builds/: alpine.yml  netbsd.yml  openbsd.yml
.github/workflows/: ci.yml  main.yml
include/: allocator.h  arena.h  bits.h  bits.hpp  coroutine.h  defer.h  defer.hpp  expect.h  feature.h  fnv.h  hashtable.h  lambda.h  macro.h  message_queue.h  printf.h
lib/: arena.c  coroutine.c  expect.c  fnv.c  hashtable.c  hashtable_py.c  message_queue.c
src/cmd/: arena_test.c  base64.c  channel_basic.c  channel_block.c  channel_expected.c  demo_oop.c  fnv_test.c  hashtable_compact_test.c  hashtable_test.c  hashtable_test.d  hashtable_test.zig  hashtable_vectors.def  hello.cpp  lambda.c  lambda.cpp  message_queue_basic.c  message_queue_block.c  message_queue_expected.c  mkavatar.c
src/libbits/: arena.c  channel.c  fnv.c  hashtable.c  hashtable_py.c  message_queue.c  printf.c
test/: arena.c  arena_test.c  coroutine_test.c  expect_test.c  fnv_test.c  hashtable_test.c  hashtable_test.py  lambda_test.cpp  message_queue_basic.c  message_queue_block.c  message_queue_copies.c  message_queue_expected.c  notramp.c  sum_tree.c
